Name:             HAppS-Extra
Version:          0.23
License:          BSD3
Author:           jeremy@seereason.com
Maintainer:       partners@seereason.com

Synopsis:         Components built on top of HAppS+HSP
Description:      A collection of components built on top of HAppS+HSP, including
                  Google Analytics, a Calendar widget, and more.

Hs-Source-Dirs:   src
Exposed-Modules:  HSP.Google.Analytics, HSP.HTML.Extra, HSP.Identity, HSP.IdentityT, HSP.Formlets.Generics,
		  HAppS.Extra, HAppS.Data.IxSet.Extra, HAppS.Data.User.Password, HAppS.Server.Session, 
		  HAppS.State.Extra, HAppS.Server.Account, HAppS.Server.Account.Server,
		  HAppS.Server.Extra, HAppS.Server.HSP.HTML, HAppS.Server.CookieFixer, HAppS.Server.Main
                  
Build-Depends:    base, hsp >= 0.4.4, harp >= 0.4, Extra >= 1.27, HAppS-IxSet, HAppS-Data, HAppS-Util, mtl, random, HAppS-State, html, HAppS-Server >= 0.9.2.2, hsx >= 0.4.4, applicative-extras >= 0.1.3, formlets, formlets-hsp >= 1.2, syb-with-class >= 0.4, utf8-string, bytestring, RJson, regex-compat, containers, network, parsec
Build-Type:       Simple
Category:         Web, Language

Extensions:             MultiParamTypeClasses,
                        TypeFamilies,
                        FlexibleContexts,
                        FlexibleInstances,
                        TypeSynonymInstances,
                        OverlappingInstances,
                        UndecidableInstances
