Name:             HAppS-Extra
Version:          0.26
License:          BSD3
Author:           jeremy@seereason.com
Maintainer:       partners@seereason.com

Synopsis:         Components built on top of HAppS+HSP
Description:      A collection of components built on top of HAppS+HSP, including
                  Google Analytics, a Calendar widget, and more.

Hs-Source-Dirs:   src
Exposed-Modules:  HSP.Google.Analytics, HSP.HTML.Extra, HSP.Identity, HSP.IdentityT,
		  HAppS.Extra, HAppS.Data.IxSet.Extra, HAppS.Data.User.Password, HAppS.Server.Session, 
		  HAppS.State.Extra, HAppS.Server.Account, HAppS.Server.Account.Server, HAppS.Server.SimpleHTTP.Extra,
		  HAppS.Server.Extra, HAppS.Server.HSP.HTML, HAppS.Server.CookieFixer, HAppS.Server.Main
                  
Build-Depends:    base, bytestring, containers, html, mtl, network, parsec, random, regex-compat, utf8-string, hsp >= 0.4.4, harp >= 0.4, hsx >= 0.4.4, HAppS-Server >= 0.9.2.2, HAppS-Data, HAppS-IxSet, HAppS-Util, HAppS-State, RJson, Extra >= 1.27
Build-Type:       Simple
Category:         Web, Language

Extensions:             MultiParamTypeClasses,
                        TypeFamilies,
                        FlexibleContexts,
                        FlexibleInstances,
                        TypeSynonymInstances,
                        OverlappingInstances,
                        UndecidableInstances
