Name:             happstack-extra
Version:          0.64
License:          BSD3
Author:           jeremy@seereason.com
Maintainer:       partners@seereason.com

Synopsis:         Components built on top of Happstack+HSP
Description:      A collection of components built on top of Happstack+HSP, including
                  Google Analytics, a Calendar widget, and more.

Hs-Source-Dirs:   src
Exposed-Modules:  HSP.Google.Analytics, HSP.HTML.Extra, HSP.Identity, HSP.IdentityT, HSP.WebT, HSP.ServerPartT
                  Happstack.Extra, Happstack.Data.IxSet.Extra,
                  Happstack.Data.User.Password, Happstack.Data.User.Permissions,
                  Happstack.Server.Session, Happstack.Data.Serialize.Extra, 
                  Happstack.State.Extra, Happstack.Server.Account, Happstack.Server.Account.Server,
                  Happstack.Server.SimpleHTTP.Extra, Happstack.Server.Extra, Happstack.Server.Main, 
                  Happstack.Server.Formlets, Happstack.Server.RqData, Happstack.Server.Feed, HSP.Pandoc,
                  Happstack.Data.IxSet.POSet, Happstack.Data.IxSet.Revision, Happstack.Data.IxSet.Merge,
		  Happstack.Data.IxSet.Store, Happstack.Data.IxSet.Triplets
                  
Build-Depends:    base >= 4, bytestring, containers, html, mtl, network, parsec, random, regex-compat,
                  syb, syb-with-class, utf8-string, hsp >= 0.4.4, harp >= 0.4, hsx >= 0.4.4,
                  happstack-server, happstack-data, happstack-ixset, happstack-util, happstack-state, happstack,
                  RJson, Extra >= 1.27, applicative-extras, formlets, feed, xml, pandoc, html-entities
hs-source-dirs:   src

Build-Type:       Simple
Category:         Web, Language
Extensions:             MultiParamTypeClasses,
                        TypeFamilies,
                        FlexibleContexts,
                        FlexibleInstances,
                        TypeSynonymInstances,
                        OverlappingInstances,
                        UndecidableInstances
