Name:             happstack-extra
Version:          0.92
License:          BSD3
Author:           jeremy@seereason.com
Maintainer:       partners@seereason.com

Synopsis:         Components built on top of Happstack+HSP
Description:      A collection of components built on top of Happstack+HSP, including
                  Google Analytics, a Calendar widget, and more.

Hs-Source-Dirs:   src
Exposed-Modules:  HSP.HTML.Extra,
                  Happstack.Extra,
                  Happstack.Data.IxSet.Extra,
                  Happstack.Data.User.Password,
                  -- Happstack.Data.User.Permissions,
                  -- Happstack.Server.Session,
                  Happstack.Data.Serialize.Extra, 
                  -- Happstack.State.Extra,
                  -- Happstack.Server.Account,
                  -- Happstack.Server.Account.Server,
                  Happstack.Server.SimpleHTTP.Extra,
                  Happstack.Server.Extra,
                  -- Happstack.Server.Main, 
                  -- Happstack.Server.Formlets,
                  Happstack.Server.Feed,
                  HSP.Pandoc,
		  Happstack.Data.Logger
Other-Modules:    Extra.URIQuery Extra.URI
                  
Build-Depends:    base >= 4,
                  bytestring,
                  containers,
                  filepath,
                  html,
                  mtl,
                  network,
                  random,
                  syb,
                  syb-with-class,
                  utf8-string,
                  hsp >= 0.4.4,
                  hsx >= 0.4.4,
                  hslogger,
                  happstack-server >= 6.5,
                  happstack-data,
                  happstack-hsp,
                  happstack-ixset,
                  happstack-util,
                  RJson,
                  applicative-extras >= 0.1.5,
                  formlets >= 0.7.1,
                  feed,
                  xml,
                  pandoc,
                  html-entities,
                  syb-with-class-instances-text
hs-source-dirs:   src

Build-Type:       Simple
Category:         Web, Language
Extensions:             MultiParamTypeClasses,
                        TypeFamilies,
                        FlexibleContexts,
                        FlexibleInstances,
                        TypeSynonymInstances,
                        OverlappingInstances,
                        UndecidableInstances
