Name:             happstack-extra
Version:          0.94
License:          BSD3
Author:           jeremy@seereason.com
Maintainer:       partners@seereason.com

Synopsis:         Components built on top of Happstack+HSP
Description:      A collection of components built on top of Happstack+HSP, including
                  Google Analytics, a Calendar widget, and more.

Hs-Source-Dirs:   src
Exposed-Modules:  Data.Generics.Extra,
		  HSP.HTML.Extra,
                  Happstack.Extra,
                  Happstack.Data.IxSet.Extra,
                  Happstack.Data.User.Password,
                  -- Happstack.Data.User.Permissions,
                  -- Happstack.Server.Session,
                  Happstack.Data.Serialize.Extra,
                  -- Happstack.State.Extra,
                  -- Happstack.Server.Account,
                  -- Happstack.Server.Account.Server,
                  Happstack.Server.SimpleHTTP.Extra,
                  Happstack.Server.Extra,
                  -- Happstack.Server.Main,
                  -- Happstack.Server.Formlets,
                  Happstack.Server.Feed,
                  HSP.Pandoc,
		  Happstack.Data.Logger
Other-Modules:    Network.URI.Extra

Build-Depends:    base >= 4,
                  bytestring,
                  containers,
                  data-default,
                  feed,
                  filepath,
                  happstack-hsp,
                  ixset,
                  happstack-server >= 6.5,
                  happstack-util,
                  hslogger,
                  hsp >= 0.4.4,
                  html,
                  html-entities,
                  mtl,
                  network >= 2.4,
                  pandoc >= 0.10,
                  random,
                  safecopy,
                  syb,
                  utf8-string,
                  xml
hs-source-dirs:   src

Build-Type:       Simple
Category:         Web, Language
Extensions:             MultiParamTypeClasses,
                        TypeFamilies,
                        FlexibleContexts,
                        FlexibleInstances,
                        TypeSynonymInstances,
                        OverlappingInstances,
                        UndecidableInstances
